@@ -6,6 +6,8 @@ Fri Nov 23 11:10:14 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 	* src/org/jcae/mesh/xmldata/MMesh1DWriter.java
 	  src/org/jcae/mesh/xmldata/MeshWriter.java: Remove brep directory
 	from arguments of writeObject() and writeObject3D() methods.
+	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Disable
+	ridge detection, it is broken.
 
 Thu Nov 22 23:22:30 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
